--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -30,8 +30,8 @@
 						<% if (userIN) { %>
 
 							<ul class="nav navbar-nav navbar-right" style="align-items: center;">
-								<li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-								<li><a class="hover-btn-new log orange mr-2" <%= page_name === 'login' && 'orange' %> href="/login"><span><i class="fa fa-sign-out" aria-hidden="true"></i></span></a></li>
+								<li class="nav-item  <%= page_name === 'dashboard' && 'active' %>"><a class="nav-link" href="/users/dashboard">Dashboard</a></li>
+								<li><a class="hover-btn-new log orange mr-2" <%= page_name === 'login' && 'orange' %> href="/users/logout"><span><i class="fa fa-sign-out" aria-hidden="true"></i></span></a></li>
 							</ul>
 
 						<% } %>
