--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,9 +2,11 @@
 
 <%- include('./partials/_navigation.ejs') %>
 
+<% if(user) { %>
+
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1> <%= user.name %> <span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1> <%= user.name %> <span class="m_1"><%= user.role %></span></h1>
 		</div>
 	</div>
 
@@ -92,5 +94,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
+
+<% } %>
 
 <%- include('./partials/_footer.ejs') %>
