--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -23,7 +23,7 @@
 								<div class="col-lg-6 col-md-6 col-12">
 									<div class="course-item mb-5">
 										<div class="image-blog">
-											<img src="images/blog_1.jpg" alt="" class="img-fluid">
+											<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 										</div>
 										<div class="course-br">
 											<div class="course-title">
@@ -39,7 +39,7 @@
 										</div>
 										<div class="course-meta-bot">
 											<ul>
-												<li><i class="fa fa-user" aria-hidden="true"></i>Teacher Name</li>
+												<li><i class="fa fa-user" aria-hidden="true"></i><%= user.name %></li>
 											</ul>
 										</div>
 									</div>
