Course student relationship is complete. Students will be able to save and delete courses for themselves.

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -33,7 +33,7 @@
 											</div>
 											<div class="course-desc">
 												<p>
-													<%= courses[i].descriptions %>
+													<%= courses[i].descriptions.substring(0 , 200) + "..." %>
 												</p>
 											</div>
 										</div>
