--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,82 +37,44 @@
 							</div><!-- end col -->
 						</div><!-- end row -->
 						<div class="row mt-5">
-							<div class="col-lg-6 col-md-6 col-12">
-								<div class="course-item mb-5">
-									<div class="image-blog">
-										<img src="images/blog_1.jpg" alt="" class="img-fluid">
-									</div>
-									<div class="course-br">
-										<div class="course-title">
-											<h2><a href="course-single.html" title="">Engineering</a></h2>
-										</div>
-										<div class="course-desc">
-											<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum
-												intel ogrets geuiat operts elicata libere avisse id cumleZgebat, liber
-												regione eu sit.... </p>
-										</div>
-									</div>
-								</div>
-							</div><!-- end col -->
 
-							<div class="col-lg-6 col-md-6 col-12">
-								<div class="course-item mb-5">
-									<div class="image-blog">
-										<img src="images/blog_2.jpg" alt="" class="img-fluid">
-									</div>
-									<div class="course-br">
-										<div class="course-title">
-											<h2><a href="course-single.html" title="">Hotel Management</a></h2>
+							<% for(let i=0; i < user.courses.length ; i++) { %>
+
+								<div class="col-lg-6 col-md-6 col-12">
+									<div class="course-item mb-5">
+										<div class="image-blog">
+											<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 										</div>
-										<div class="blog-desc">
-											<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum
-												intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber
-												regione eu sit.... </p>
-										</div>
-									</div>
-								</div>
-							</div><!-- end col -->
-							<div class="col-lg-6 col-md-6 col-12">
-								<div class="course-item mb-5">
-									<div class="image-blog">
-										<img src="images/blog_2.jpg" alt="" class="img-fluid">
-									</div>
-									<div class="course-br">
-										<div class="course-title">
-											<h2><a href="course-single.html" title="">Hotel Management</a></h2>
-										</div>
-										<div class="blog-desc">
-											<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum
-												intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber
-												regione eu sit.... </p>
+										<div class="course-br">
+											<div class="course-title">
+												<h2><a href="course-single.html" title="">
+														<%= user.courses[i].name %>
+													</a></h2>
+											</div>
+											<div class="course-desc">
+												<p>
+													<%= user.courses[i].description %>
+												</p>
+											</div>
+
+											<form method="POST" action="/courses/release">
+												<input type="hidden" name="course_id" value="<%= user.courses[i]._id %>">
+												<button
+													class="btn btn-lg btn-danger text-white"><span>RELEASE</span></button>
+											</form>
 										</div>
 									</div>
-								</div>
-							</div><!-- end col -->
-							<div class="col-lg-6 col-md-6 col-12">
-								<div class="course-item mb-5">
-									<div class="image-blog">
-										<img src="images/blog_2.jpg" alt="" class="img-fluid">
-									</div>
-									<div class="course-br">
-										<div class="course-title">
-											<h2><a href="course-single.html" title="">Hotel Management</a></h2>
-										</div>
-										<div class="blog-desc">
-											<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum
-												intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber
-												regione eu sit.... </p>
-										</div>
-									</div>
-								</div>
-							</div><!-- end col -->
+								</div><!-- end col -->
+
+								<% } %>
+
 						</div><!-- end row -->
 					</div><!-- end container -->
 				</div><!-- end section -->
 
 				<% } %>
 
-					<% if(user.role === "teacher" ) { %>
+					<% if(user.role==="teacher" ) { %>
 						<div class="all-title-box">
 							<div class="container text-center">
 								<h1>
@@ -137,14 +99,16 @@
 									<div class="col-lg-12 blog-post-single">
 										<div class="blog-author">
 											<div class="author-bio">
-												<h3 class="author_name"><a href="#"><%= user.name %></a></h3>
+												<h3 class="author_name"><a href="#">
+														<%= user.name %>
+													</a></h3>
 												<h5>CEO at <a href="#">SmartEDU</a></h5>
 												<p class="author_det">
 
 												</p>
 											</div>
 											<div class="author-desc">
-												<img src="images/author.jpg" alt="about author">
+												<img src="/images/author.jpg" alt="about author">
 											</div>
 										</div>
 
@@ -152,7 +116,7 @@
 								</div><!-- end row -->
 								<div class="row mt-5">
 
-								<% for ( let i = 0; i < courses.length; i++ ) { %>
+									<% for ( let i=0; i < courses.length; i++ ) { %>
 
 										<div class="col-lg-6 col-md-6 col-12">
 											<div class="course-item mb-5">
@@ -161,17 +125,21 @@
 												</div>
 												<div class="course-br">
 													<div class="course-title">
-														<h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name %></a></h2>
-												</div>
-												<div class="blog-desc">
-													<p><%= courses[i].description%> </p>
+														<h2><a href="/courses/<%= courses[i].slug %>" title="">
+																<%= courses[i].name %>
+															</a></h2>
+													</div>
+													<div class="blog-desc">
+														<p>
+															<%= courses[i].description%>
+														</p>
+													</div>
 												</div>
 											</div>
 										</div>
-									</div>
-									<!-- end col -->
+										<!-- end col -->
 
-								<% } %>
+										<% } %>
 
 								</div><!-- end row -->
 							</div><!-- end container -->
@@ -193,21 +161,25 @@
 													</div>
 													<div class="form-group">
 														<div class="col-sm-12">
-															<input type="hidden" name="role" class="form-control" value=" <%= user.role %>">
+															<input type="hidden" name="role" class="form-control"
+																value=" <%= user.role %>">
 														</div>
 													</div>
 													<div class="form-group">
 														<div class="col-sm-12">
 															<select class="form-control" name="category">
-																<% for( let i = 0; i < categories.length; i++ ) { %>
-																	<option value="<%= categories[i].name %>"> <%= categories[i].name %> </option>
-																<% } %>
+																<% for( let i=0; i < categories.length; i++ ) { %>
+																	<option value="<%= categories[i].name %>">
+																		<%= categories[i].name %>
+																	</option>
+																	<% } %>
 															</select>
 														</div>
 													</div>
 													<div class="form-group">
 														<div class="col-sm-12">
-															<textarea rows="8" name="description" class="form-control" placeholder="Course Description" required></textarea>
+															<textarea rows="8" name="description" class="form-control"
+																placeholder="Course Description" required></textarea>
 														</div>
 													</div>
 													<div class="row">
