A search function has been added within the courses with a search bar.

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -33,13 +33,13 @@
 											</div>
 											<div class="course-desc">
 												<p>
-													<%= courses[i].descriptions.substring(0 , 200) + "..." %>
+													<%= courses[i].descriptions%>
 												</p>
 											</div>
 										</div>
 										<div class="course-meta-bot">
 											<ul>
-												<li><i class="fa fa-user" aria-hidden="true"></i><%= user.name %></li>
+												<li><i class="fa fa-user" aria-hidden="true"></i><%= %></li>
 											</ul>
 										</div>
 									</div>
@@ -58,11 +58,10 @@
 					<div class="col-lg-3 col-12 right-single">
 						<div class="widget-search">
 							<div class="site-search-area">
-								<form method="get" id="site-searchform" action="#">
+								<form method="GET" id="site-searchform" action="#">
 									<div>
-										<input class="input-text form-control" name="search-k" id="search-k"
-											placeholder="Search keywords..." type="text">
-										<input id="searchsubmit" value="Search" type="submit">
+										<input class="input-text form-control" name="search" id="search-k" placeholder="Search..." type="text">
+										<button id="searchsubmit" value="Search" type="submit"></button>
 									</div>
 								</form>
 							</div>
