--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,13 +22,13 @@
                         <form id="contactform" class="" action="/contact" name="contactform" method="POST">
                             <div class="row row-fluid">
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" name="name" id="first_name" class="form-control" placeholder="Name">
+                                    <input type="text" name="name" id="first_name" class="form-control" placeholder="Name" value="<%= user ? user.name : '' %> " required>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
+                                    <input type="email" name="email" id="email" class="form-control" placeholder="Your Email" value="<%= user ? user.email : '' %>" required>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <textarea class="form-control" name="message" id="comments" rows="6" placeholder="Give us more details.."></textarea>
+                                    <textarea class="form-control" name="message" id="comments" rows="6" placeholder="Give us more details.." required></textarea>
                                 </div>
                                 <div class="text-center pd">
                                     <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">SEND</button>
