--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -126,8 +126,8 @@
 								<div class="row">
 
 													<div class="col-lg-12 text-center">
-														<button class="btn btnlg  btn-warning rounded-0 text-white"
-															href="" data-toggle="modal" data-target="#addCourse">
+														<button type="button" class="btn btn-lg btn-warning rounded-0 text-white"
+															data-toggle="modal" data-target="#addCourse">
 															<span>
 																CREATE NEW COURSE
 															</span>
@@ -173,16 +173,73 @@
 														</p>
 													</div>
 													<div class="clearfix">
-														<ul style="list-style-type: none; display: flex; column-gap: 40%;">
-															<li><a class="btn btn-primary rounded-0 text-white"><span>Update</span></a></li>
-															<li><a class="btn btn-danger rounded-0 text-white" href="/courses/<%= courses[i].slug %>?_method=DELETE" onclick=" return confirm('ARE YOU SURE?')"><span>Delete</span></a></li>
+														<ul class="list-unstyled d-flex justify-content-between">
+															<li><a class="btn btn-primary rounded-0 text-white" data-toggle="modal" data-target="#updateCourse<%= courses[i]._id %>"><span>Update</span></a></li>
+															<li><a class="btn btn-danger rounded-0 text-white" href="/courses/<%= courses[i].slug %>?_method=DELETE" onclick="return confirm('ARE YOU SURE?')"><span>Delete</span></a></li>
 														</ul>
 													</div>
 												</div>
-
 											</div>
 										</div>
 										<!-- end col -->
+
+										<div class="modal fade" id="updateCourse<%= courses[i]._id %>" tabindex="-1" role="dialog"
+											aria-labelledby="myModalLabel">
+											<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+												<div class="modal-content">
+													<div class="modal-body customer-box">
+														<div class="tab-content">
+															<form role="form" method="POST" action="/courses/<%= courses[i].slug %>?_method=PUT" class="form-horizontal">
+																<div class="tab-pane active" id="Login">
+																	<div class="form-group">
+																		<div class="col-sm-12">
+																			<input type="text" name="name" class="form-control"
+																				placeholder="Course Name">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="col-sm-12">
+																			<input type="hidden" name="role" class="form-control"
+																				value=" <%= user.role %>">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="col-sm-12">
+																			<select class="form-control" name="category">
+																				<% for( let i=0; i < categories.length; i++ ) { %>
+																					<option value="<%= categories[i].name %>">
+																						<%= categories[i].name %>
+																					</option>
+																					<% } %>
+																			</select>
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="col-sm-12">
+																			<textarea rows="8" name="description" class="form-control" value="<%= courses[i].description %>"
+																				placeholder="Course Description" required></textarea>
+																		</div>
+																	</div>
+																	<div class="row">
+																		<div class="col-sm-10">
+																			<button type="submit"
+																				class="btn btn-light btn-radius btn-brd grd1">
+																				Submit
+																			</button>
+																			<button type="button"
+																				class="btn btn-light btn-radius btn-brd grd1"
+																				data-dismiss="modal" aria-hidden="true">
+																				Cancel
+																			</button>
+																		</div>
+																	</div>
+																</div>
+															</form>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
 
 										<% } %>
 
@@ -190,66 +247,9 @@
 							</div><!-- end container -->
 						</div><!-- end section -->
 
-						<div class="modal fade" id="addCourse" tabindex="-1" role="dialog"
-							aria-labelledby="myModalLabel">
-							<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-								<div class="modal-content">
-									<div class="modal-body customer-box">
-										<div class="tab-content">
-											<form role="form" method="POST" action="/courses" class="form-horizontal">
-												<div class="tab-pane active" id="Login">
-													<div class="form-group">
-														<div class="col-sm-12">
-															<input type="text" name="name" class="form-control"
-																placeholder="Course Name">
-														</div>
-													</div>
-													<div class="form-group">
-														<div class="col-sm-12">
-															<input type="hidden" name="role" class="form-control"
-																value=" <%= user.role %>">
-														</div>
-													</div>
-													<div class="form-group">
-														<div class="col-sm-12">
-															<select class="form-control" name="category">
-																<% for( let i=0; i < categories.length; i++ ) { %>
-																	<option value="<%= categories[i].name %>">
-																		<%= categories[i].name %>
-																	</option>
-																	<% } %>
-															</select>
-														</div>
-													</div>
-													<div class="form-group">
-														<div class="col-sm-12">
-															<textarea rows="8" name="description" class="form-control"
-																placeholder="Course Description" required></textarea>
-														</div>
-													</div>
-													<div class="row">
-														<div class="col-sm-10">
-															<button type="submit"
-																class="btn btn-light btn-radius btn-brd grd1">
-																Submit
-															</button>
-															<button type="submit"
-																class="btn btn-light btn-radius btn-brd grd1"
-																data-dismiss="modal" aria-hidden="true">
-																Cancel
-															</button>
-														</div>
-													</div>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+
 
 						<% } %>
-
-							<% } %>
+						<% } %>
 
 								<%- include('./partials/_footer.ejs') %>
